--- a/GreenMarketBackend/appsettings.json
+++ b/GreenMarketBackend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server: DESKTOP-S5ULU19\\SQLEXPRESS; Database=GreenMarket; Trusted_Connection:True;"
+  }
 }
