Updated models + DbContext

--- a/GreenMarketBackend/appsettings.json
+++ b/GreenMarketBackend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server: DESKTOP-S5ULU19\\SQLEXPRESS; Database=GreenMarket; Trusted_Connection:True;"
+    "DefaultConnection": "Data Source=DESKTOP-S5ULU19\\SQLEXPRESS;Initial Catalog=BusStation;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;"
   }
 }
