--- a/GreenMarketBackend/GreenMarketBackend.csproj
+++ b/GreenMarketBackend/GreenMarketBackend.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Views\Accounts\" />
     <Folder Include="Views\Categories\" />
     <Folder Include="Views\Cart\" />
   </ItemGroup>
