--- a/GreenMarketBackend/appsettings.json
+++ b/GreenMarketBackend/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-S5ULU19\\SQLEXPRESS; Database=GreenMarket; Trusted_Connection=True; TrustServerCertificate=true"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "528360287537-o9b6a332lpbi4vrq87pkk4lnuvj3engl.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   }
 }
