Fixed product upload image

--- a/GreenMarketBackend/GreenMarketBackend.csproj
+++ b/GreenMarketBackend/GreenMarketBackend.csproj
@@ -23,6 +23,7 @@
     <Folder Include="Migrations\" />
     <Folder Include="Views\Categories\" />
     <Folder Include="Views\Cart\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
