--- a/GreenMarketBackend/appsettings.json
+++ b/GreenMarketBackend/appsettings.json
@@ -14,5 +14,15 @@
       "ClientId": "528360287537-o9b6a332lpbi4vrq87pkk4lnuvj3engl.apps.googleusercontent.com",
       "ClientSecret": "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"
     }
+  },
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com ",
+    "Port": 587,
+    "SenderName": "Your Name",
+    "SenderEmail": "packaras@gmail.com",
+    "Username": "packaras@gmail.com",
+    "Password": "cukz kzii ghua tboj",
+    "EnableSsl": true,
+    "Timeout": 10000
   }
 }
