--- a/GreenMarketBackend/appsettings.json
+++ b/GreenMarketBackend/appsettings.json
@@ -19,7 +19,7 @@
   "SmtpSettings": {
     "Server": "smtp.gmail.com ",
     "Port": 587,
-    "SenderName": "Your Name",
+    "SenderName": "Green Market",
     "SenderEmail": "packaras@gmail.com",
     "Username": "packaras@gmail.com",
     "Password": "cukz kzii ghua tboj",
